--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>How To Cancel Your fuboTV Subscription?</title>
+<title>How To Cancel Your fuboTV Subscription? A Complete Guide</title>
 <style>
   /* Reset and base */
   * {
@@ -42,25 +42,27 @@
     100% { transform: translateY(0); opacity: 1; }
   }
 
-  /* Support Button */
   .support-btn {
-    background: #ffa500;
-    border: none;
-    padding: 0.7rem 1.4rem;
-    color: white;
-    font-weight: 600;
-    font-size: 1rem;
-    border-radius: 25px;
-    box-shadow: 0 6px 12px rgba(255, 165, 0);
-    cursor: pointer;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-  }
-  .support-btn:hover,
-  .support-btn:focus {
-    transform: scale(1.1);
-    box-shadow: 0 8px 16px rgba(255, 165, 0);
-    outline: none;
-  }
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
+  background: #ffa500;
+  border: none;
+  padding: 0.7rem 1.4rem;
+  color: white;
+  font-weight: 600;
+  font-size: 1rem;
+  border-radius: 25px;
+  box-shadow: 0 6px 12px rgba(100%, 64.7%, 0%);
+  cursor: pointer;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.support-btn:hover,
+.support-btn:focus {
+  transform: scale(1.1);
+  box-shadow: 0 8px 16px rgba(100%, 64.7%, 0%);
+  outline: none;
+}
 
   /* Hero Section */
   .hero {
@@ -134,7 +136,7 @@
 
 <header>
   <img src="https://images.ctfassets.net/6pk8mg3yh2ee/6zj0F1SOGWqoQ6E4s2iaie/640740e4fe2356db03cd807255a55a90/fubotv.png" alt="fuboTV Logo" class="logo" />
-  <button class="support-btn" aria-label="Support Button">Support</button>
+  <a href="https://tek.chat/" target="_blank" rel="noopener noreferrer" class="support-btn" aria-label="Support Button">Support</a>
 </header>
 
 <section class="hero" role="banner">
