--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Start of  Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=7668c976-0fb7-47ee-8740-3e9115bdb10f"> </script>
+<!-- End of  Zendesk Widget script -->
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>How To Cancel Your fuboTV Subscription? A Complete Guide</title>
+<meta name="description" content="Learn how to easily cancel your fuboTV subscription with our step-by-step guide. Quick, simple, and hassle-free cancellation process explained.">
+<meta name="keywords" content="fubotv cancel subscription, fubotv subscription, fubotv subscription cancel, cancel fubotv subscription, how to cancel fubotv subscription, how do i cancel fubotv subscription">
+<meta name="author" content="FuboTV Subscription">
 <style>
   /* Reset and base */
   * {
